--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "ext-gd": "*",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
-        "spatie/laravel-permission": "^5.7",
-        "ext-gd":"*"
+        "league/flysystem-aws-s3-v3": "^3.10",
+        "spatie/laravel-permission": "^5.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
